--- a/views/contato.jade
+++ b/views/contato.jade
@@ -14,10 +14,10 @@ block content
             p - Tiver dúvidas sobre o funcionamento do site;
             p - Tiver sugestões e recomendações;
             p - Quiser saber mais sobre o projeto;
-            p - Quiser colaborar com o projecto;
+            p - Quiser colaborar com o projeto;
           div
             h2 Acesso aos dados
-            p.main(style='text-align:justify') Toda a informação gerada pelo mais
+            p.main(style='text-align:justify') Salvo a identidade e informações de contacto, toda a informação gerada pela mais
               textoblue  +
               textored Metro
               texto  também poderá ser disponibilizada, em caráter individual, para fins educacionais ou pesquisas de interesse público desde que seja enviada uma proposta de pesquisa com uma breve descrição do tema, nome, contato do pesquisador, instituição de pesquisa e grau do estudo;
