--- a/views/projeto.jade
+++ b/views/projeto.jade
@@ -28,7 +28,7 @@ block content
           textoblue +
           textored  Metro
         p(class="lead", style='padding-top:20px;') É uma plataforma colaborativa de apoio às decisões sobre o transporte público em Belo Horizonte.
-        p(class="lead", style='padding-top:20px;') Inspirado na Linie Funf, desenvolvida na cidade de Hamburg, o
+        p(class="lead", style='padding-top:20px;') Inspirado na Linie Funf, desenvolvida na cidade de Hamburg, a
           textoblue  +
           textored Metro
           texto  propõe criar um espaço para a formação de um debate público amplo, informativo e empoderador
@@ -48,7 +48,7 @@ block content
         h2(style='font-size:50px;')
           textoblue +
           textored  Debate
-        p(class="lead", style='padding-top:20px;') O
+        p(class="lead", style='padding-top:20px;') A
           textoblue  +
           textored Metro
           texto  não é um concurso de ideias.
@@ -61,7 +61,7 @@ block content
           textoblue +
           textored  Compromisso
         p(class="lead", style='padding-top:20px;') Ao participar, desenhando o seu trajeto, você junta a sua voz à de outras pessoas que partilham o mesmo interesse. Um grande número de participantes será um forte argumento para o nossos governantes prestarem mais atenção ao nosso transporte público.
-        p(class="lead", style='padding-top:20px;') Com o
+        p(class="lead", style='padding-top:20px;') Com a
           textoblue  +
           textored Metro
           , queremos levar a sua ideia ao poder local.
