--- a/views/projeto.jade
+++ b/views/projeto.jade
@@ -1,10 +1,13 @@
 extends layout2
 
+extends layout2
+
 block content
     body
       div.container(style='padding-top:60px')
         div.col-xs-12.col-md-4
-          img.logoProjeto(src='../images/Logo.jpg')
+          a(href='/')
+            img.logoProjeto(src='../images/Logo.jpg')
         div.col-xs-12.col-md-8
           div.col-xs-12(style='float: right !important; padding-right: 0px !important;')
             h2.texto(style='font-size: 40px; float: right !important; padding-right: 0px !important; padding-top: 80px;') Sobre o
@@ -28,7 +31,7 @@ block content
           textoblue +
           textored  Metro
         p(class="lead", style='padding-top:20px;') É uma plataforma colaborativa de apoio às decisões sobre o transporte público em Belo Horizonte.
-        p(class="lead", style='padding-top:20px;') Inspirado na Linie Funf, desenvolvida na cidade de Hamburg, a
+        p(class="lead", style='padding-top:20px;') Inspirado na Linie Funf, desenvolvida na cidade de Hamburgo, a
           textoblue  +
           textored Metro
           texto  propõe criar um espaço para a formação de um debate público amplo, informativo e empoderador
@@ -48,7 +51,7 @@ block content
         h2(style='font-size:50px;')
           textoblue +
           textored  Debate
-        p(class="lead", style='padding-top:20px;') A
+        p(class="lead", style='padding-top:20px;')
           textoblue  +
           textored Metro
           texto  não é um concurso de ideias.
