--- a/views/footer.jade
+++ b/views/footer.jade
@@ -7,7 +7,7 @@ footer(class="footer")
         li.liredux
           a.mapasite(href="/addidea/") Novo Trajeto
         li.liredux
-          a.mapasite(href="#debate") Debate
+          a.mapasite(href="/#debate") Debate
         li.liredux
           a.mapasite(href="/contato/") Contato
         li.liredux
