--- a/views/index.jade
+++ b/views/index.jade
@@ -2,11 +2,12 @@ extends layout2
 
 block content
 
-  meta(property="og:title", content="MaismetroBH")
-  meta(property="og:type", content="website")
-  meta(property="og:url", content="http://www.maismetrobh.com.br")
-  meta(property="og:image", content="http://www.maismetrobh.com.br/images/Logoface.png")
-  meta(name="description", content="+METRO é uma plataforma colaborativa de apoio às decisões sobre o transporte público em Belo Horizonte. Inspirado na Linie Funf, desenvolvida na cidade de Hamburg, o +Metro propõe criar um espaço para a formação de um debate público amplo, informativo e empoderador.")
+  Head
+    meta(property="og:title", content="MaismetroBH")
+    meta(property="og:type", content="website")
+    meta(property="og:url", content="http://www.maismetrobh.com.br")
+    meta(property="og:image", content="http://www.maismetrobh.com.br/images/Logoface.png")
+    meta(name="description", content="+METRO é uma plataforma colaborativa de apoio às decisões sobre o transporte público em Belo Horizonte. Inspirado na Linie Funf, desenvolvida na cidade de Hamburg, o +Metro propõe criar um espaço para a formação de um debate público amplo, informativo e empoderador.")
 
   body
     div#logoP.container(style='padding-top:60px')
@@ -28,10 +29,16 @@ block content
             texto de
             textobold  Belo Horizonte
         ul.nav2(style='padding-right: 0px !important; padding-top: 14px !important; margin-left: -7px; margin-right: -7px;')
-          div(class="col-xs-3", style="padding: 0px;")
-            a(class='b', href="/login/")
-              img.thumbs(src='../images/Thumbs/registo.jpg')
-              p.thumbsTxt Crie sua conta
+          if (user)
+            div(class="col-xs-3", style="padding: 0px;")
+              a(class='b', href="/addidea/")
+                img.thumbs(src='../images/Thumbs/registo.jpg')
+                p.thumbsTxt Crie sua conta
+          if (!user)
+            div(class="col-xs-3", style="padding: 0px;")
+              a(class='b', href="/login/")
+                img.thumbs(src='../images/Thumbs/registo.jpg')
+                p.thumbsTxt Crie sua conta
           if (user)
             div(class="col-xs-3", style="padding: 0px;")
               a(class='b', href="/addidea/")
@@ -74,8 +81,7 @@ block content
             textored  +
             texto  perto de você
           div(class="col-xs-12", style='font-size:40px; padding-left:5px; padding-right:39px; margin-top:10px;')
-            p.h2(style='margin-top:10px;') Pesquisas Tags
-            input#inputFilter(type='text', class='search incomment col-xs-12 col-md-6', placeholder='#Procurar', style='font-size:13px; padding:2px; margin-top:10px;')
+            input#inputFilter(type='text', class='search incomment col-xs-12 col-md-6', placeholder='Pesquisa por #Tags ou Pessoas', style='font-size:13px; padding:2px; margin-top:10px;')
             div(class="col-xs-12", style='font-size:40px; padding:0px; margin-top:10px;')
           ul(id='refs', class='list', style='margin: auto; padding-left:0px; padding-right:10px;')
 
@@ -98,7 +104,7 @@ block content
                     div.row(style='margin-top: 8px; margin-left:0px; margin-right:0px')
                       img.avatar(src=Idea.user.picture, style='float:left; padding: 0px; background-color:#fff')
                       div(class='col-xs-8 col-md-10', style='margin-top: auto; margin-bottom: auto; padding: 0px; margin-left:5px;')
-                        p.txicon(class='col-xs-12', style='padding-left: 6px')= Idea.user.username
+                        p.txicon(class='col-xs-12 uname', style='padding-left: 6px')= Idea.user.username
                         div(id='#{Idea.id}'+'m', class='col-xs-10')
                         p.txicon(class='col-xs-2', style='padding-left: 6px')= "("+Idea.rating.length+")"
                         p.txicon(class='col-xs-12', style='padding-left: 6px')= "Comentários "+Idea.comments.length
