--- a/views/footer.jade
+++ b/views/footer.jade
@@ -7,11 +7,13 @@ footer(class="footer")
         li.liredux
           a.mapasite(href="/addidea/") Novo Trajeto
         li.liredux
-          a.mapasite(href="/#debate") Debate
+          a.mapasite(href="/debate") Debate
         li.liredux
           a.mapasite(href="/contato/") Contato
         li.liredux
           a.mapasite(href="/projeto/") Projeto
+        li.liredux
+          a.mapasite(href="/disclaimer/") Aviso de Privacidade
     div.col-xs-8(style='padding-right:10px;')
       div.col-xs-12(style='padding-right:0px; margin-top:10px')
         img.siganos(src='../images/footer_03.png', style='float:right')
