--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,5 +1,5 @@
 footer(class="footer")
-  div.container
+  div.container(style='padding-bottom:10px')
     div.col-xs-4
       ul.ulmapasite Mapa do site
         li.liredux
