--- a/views/user.jade
+++ b/views/user.jade
@@ -6,7 +6,7 @@ block content
         h1(style='text-align:center;') Sua Página
         div(class="row placeholders")
           div(class="col-xs-12 placeholder", style='float:center;')
-            img(src='#{user.picture}', style='width=70px; height:70px;', class='img-responsive')
+            img(src='#{user.picture}', style='height:70px;', class='img-responsive')
             h4 #{user.username}
             span(class="text-muted") #{user.email}
         div(class='col-xs-12')
