--- a/views/showidea.jade
+++ b/views/showidea.jade
@@ -30,7 +30,7 @@ block content
             #countRate(class = 'h2', style='text-align: right; padding-top: 9px')
         div(class='col-md-9', style='padding-right:0px')
           #map(class='showmap')
-          script(src='http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js')
+          script(src='/javascripts/leaflet/leaflet.js')
           script(type='text/javascript').
               var ideaId = '#{ideaId}';
               var rating = [#{rating}];
