--- a/views/projeto.jade
+++ b/views/projeto.jade
@@ -85,5 +85,5 @@ block content
             img(src='../images/PIC_BV.jpg', class='img-responsive')
             h4 Bruno Vasconcelos
             div.h2 Português de Lisboa
-            h4.bio(class="text-muted") Sociólogo e Planeador. Investigador nas áreas da Criatividade, Comunicação e Bairros Criativos.
+            h4.bio(class="text-muted") Sociólogo e Planejador. Pesquisador nas áreas da Criatividade, Comunicação e Bairros Criativos.
     include ./footer.jade
