--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -10,9 +10,37 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'junegull';
+    src: url('../stylesheets/junegull/junegull.ttf');
+}
+
+.navtext {
+  font-size: 24px !important;
+}
+
+.userbox{
+  border-radius: 2px;
+  background-color: rgba(255, 215, 70, 0.3);
+  border-color: #EC6655;
+}
+
+
+.dropmenu{
+  border-style: solid !important;
+  border-color: #EC6655 !important;
+  color: #EC6655 !important;
+  border-radius: 2px !important;
+}
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover {
+  background-color: rgba(26, 185, 216, 0.1) !important;
+  color: #fff !important;
+}
+
 @media (min-width: 1200px) {
   .container {
-    width: 970px !important;
+    width: 980px !important;
   }
 }
 
@@ -290,20 +318,14 @@ ul.pagination li.active a.page {
     border-color: #d3d3d3;
 }
 
-html, body, {
-    height: 100%;
-    width: 980px !important;
-}
-
 .banner{
+    padding-top: 5px;
   	background-image: url("../images/footer.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .bannerLogo{
-  padding-top: 10px;
-  padding-left: 1px;
   width: 210px;
 }
 
@@ -312,6 +334,7 @@ a{
 }
 
 html {
+    width: 100%;
     display: table;
     margin: auto;
 }
