--- a/views/layout2.jade
+++ b/views/layout2.jade
@@ -35,6 +35,8 @@ html
                 li
                   a(href="/projeto", style="color: rgb(255, 255, 255)") Projeto
                 li
+                  a(href="/colormap", style="color: rgb(255, 255, 255)") Mapa
+                li
                   a(href="/contato", style="color: rgb(255, 255, 255)") Contato
                 li
                   a(href="/login", style="color: rgb(255, 255, 255)") Login
@@ -43,6 +45,8 @@ html
                   a(href="/", style="color: rgb(255, 255, 255)") Início
                 li
                   a(href="/projeto", style="color: rgb(255, 255, 255)") Projeto
+                li
+                  a(href="/colormap", style="color: rgb(255, 255, 255)") Mapa
                 li
                   a(href="/contato", style="color: rgb(255, 255, 255)") Contato
                 li.dropdown
