--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -728,6 +728,16 @@ p{
   border-radius: 100%
 }
 
+
+.avatar2{
+  height: 31px;
+  width: 31px;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  background-color: #ffd746;
+  border-radius: 100%
+}
+
 .refs1{
   border-radius: 2px;
   text-align: center !important;
@@ -797,4 +807,29 @@ p{
   border-width: thin;
   border-radius: 2px;
   border: solid;
+}
+
+.info {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+.info h4 {
+    margin: 0 0 5px;
+    color: #777;
+}
+
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
 }
